fix: Post: Add jump links to edit/del actions, comments

--- a/frontend/src/css/app.views.css
+++ b/frontend/src/css/app.views.css
@@ -35,32 +35,61 @@
 
 .post-header p { margin-bottom: 0; }
 
-.view-post .post-title {
-    font-size: 2rem;
-    line-height: 1.25;
-}
-
 .view-post .post-title-comments {
     margin: 0;
     padding: 0;
     font-size: 0.95rem;
     color: #888;
 }
+
+.comment-listing-title,
+.view-comment-create,
+.post-edit-links {
+    position: relative;
+}
+
+.view-comment-create,
+.comment-listing-title { z-index: 1; }
+
+.post-edit-links { z-index: 3; }
+
+.comment-listing-title:before,
+.view-comment-create:before,
+.post-edit-links:before {
+    content: '';
+    display: block;
+    position: relative;
+    width: 0;
+    height: 5rem;
+    margin-top: -5rem;
+}
+
+.view-comment-create:before {
+    height: 4rem;
+    margin-top: -4rem;
+}
+
 .post-title + .post-title-comments {
     position: relative;
-    top: -10px;
+    top: -5px;
+}
+
+.post-title-comments a {
+    font-size: 0.85rem;
+    margin-right: 1rem;
+    display: inline-block;
 }
 
 .view-post-edit .post-details input,
 .view-post-create .post-deleted input { margin-bottom: 0; }
 
-.view-post .post-header,
-.view-post .post-body {
-    margin: 0 0 1rem;
+.view-post .post-header {
+    margin-bottom: 1.25rem;
 }
 
 .view-post .post-body {
     min-height: 300px;
+    margin-bottom: 3rem;
 }
 
 .post-header { align-items: flex-end; }
