--- a/frontend/src/css/foundation.css
+++ b/frontend/src/css/foundation.css
@@ -562,54 +562,55 @@ h6, .h6 {
     color: #cacaca; }
 
 h1, .h1 {
-  font-size: 1.5rem;
-  line-height: 1.4;
+  font-size: 1.55rem;
+  line-height: 1.25;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
 h2, .h2 {
-  font-size: 1.25rem;
-  line-height: 1.4;
-  margin-top: 0;
-  margin-bottom: 0.5rem; }
-
-h3, .h3 {
-  font-size: 1.1875rem;
-  line-height: 1.4;
-  margin-top: 0;
-  margin-bottom: 0.5rem; }
-
-h4, .h4 {
   font-size: 1.125rem;
   line-height: 1.4;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
-h5, .h5 {
-  font-size: 1.0625rem;
+h3, .h3 {
+  font-size: 1.05rem;
   line-height: 1.4;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
-h6, .h6 {
+h4, .h4 {
   font-size: 1rem;
   line-height: 1.4;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
-@media print, screen and (min-width: 40em) {
+h5, .h5 {
+  font-size: 0.95rem;
+  line-height: 1.4;
+  margin-top: 0;
+  margin-bottom: 0.5rem; }
+
+h6, .h6 {
+  font-size: 0.9rem;
+  line-height: 1.4;
+  margin-top: 0;
+  margin-bottom: 0.5rem; }
+
+@media print, screen and (min-width: 44em) {
   h1, .h1 {
-    font-size: 3rem; }
+    font-size: 1.75rem; }
   h2, .h2 {
-    font-size: 2.5rem; }
+    font-size: 1.5rem; }
   h3, .h3 {
-    font-size: 1.9375rem; }
+    font-size: 1.1315rem; }
   h4, .h4 {
     font-size: 1.5625rem; }
   h5, .h5 {
     font-size: 1.25rem; }
   h6, .h6 {
-    font-size: 1rem; } }
+    font-size: 1rem; }
+}
 
 a {
   line-height: inherit;
